tests/ui/suggestions/partialeq_suggest_swap.stderr
error[E0308]: mismatched types
  --> $DIR/partialeq_suggest_swap.rs:10:13
   |
LL |     4i32 == T(4);
   |     ----    ^^^^ expected `i32`, found `T`
   |     |
   |     expected because this is `i32`
   |
   = note: `T` implements `PartialEq<i32>`
help: consider swapping the equality
   |
LL -     4i32 == T(4);
LL +     T(4) == 4i32;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
